# PrismLauncher

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: MacOSXBundleInfo.plist.in  MacOSXPCBundleInfo.plist.in
launcher/: Application.cpp  Application.h  CMakeLists.txt  FileSystem.cpp  InstanceList.cpp  MMCZip.cpp  Untar.cpp
launcher/java/: JavaUtils.cpp  JavaVersion.cpp
launcher/java/download/: ArchiveDownloadTask.cpp  ManifestDownloadTask.cpp  SymlinkTask.cpp
launcher/macsandbox/: DynamicSandboxException.cpp  DynamicSandboxException.h  SecurityBookmarkFileAccess.h  SecurityBookmarkFileAccess.mm
launcher/meta/: VersionList.cpp
launcher/minecraft/: MinecraftInstance.cpp  MinecraftInstance.h
launcher/minecraft/auth/: AuthSession.cpp
launcher/minecraft/launch/: AutoInstallJava.cpp  LauncherPartLaunch.cpp  LauncherPartLaunch.h
launcher/minecraft/mod/: MetadataHandler.h  ResourceFolderModel.cpp  ResourcePackFolderModel.cpp  TexturePackFolderModel.cpp
launcher/modplatform/: ResourceAPI.h
launcher/modplatform/flame/: FlameAPI.cpp
launcher/modplatform/modrinth/: ModrinthAPI.cpp
launcher/net/: ApiDownload.h  ApiUpload.h  NetJob.cpp
launcher/settings/: SettingsObject.cpp  SettingsObject.h
launcher/ui/dialogs/: ProgressDialog.cpp  ReviewMessageBox.cpp
launcher/ui/pages/global/: ExternalToolsPage.cpp  JavaPage.cpp  LauncherPage.cpp  LauncherPage.h  LauncherPage.ui  MinecraftPage.cpp
launcher/ui/pages/modplatform/: ResourceModel.h
launcher/ui/pages/modplatform/flame/: FlameResourcePages.cpp
launcher/ui/pages/modplatform/import_ftb/: ListModel.cpp
launcher/ui/pages/modplatform/modrinth/: ModrinthResourcePages.cpp
launcher/ui/themes/: CatPack.cpp
launcher/ui/widgets/: DropList.cpp  DropList.h  JavaSettingsWidget.cpp  ThemeCustomizationWidget.cpp  VariableSizedImageObject.cpp
launcher/updater/: MacSparkleUpdater.mm
launcher/xpcbridge/: XPCBridge.cpp  XPCBridge.h  XPCManager.h  XPCManager.mm
libraries/dlopen-hook/: CMakeLists.txt  inject.c
nix/: unwrapped.nix
program_info/: AdhocSignedApp.entitlements  App.entitlements  AppNoSandbox.entitlements  CMakeLists.txt  container-migration.plist.in  macos_signature.sh  prism-sandbox.sb  win_install.nsi.in
xpc/: CMakeLists.txt
xpc/QuarantineRemover/: QuarantineRemovalService.h  QuarantineRemovalService.m  QuarantineRemovalServiceProtocol.h  main.m
xpc/SandboxService/: SandboxService.h  SandboxService.m  SandboxServiceProtocol.h  main.m
